pom.xml with GC + G1 *MC and FR java flags